Package: psCBS
==============

Version: 0.9.20 [2010-11-26]
o Now the default confidence intervals for plotTracks() is (0.05,0.95),
  if existing.
o Now all call functions estimate symmetric bootstrap quantiles for
  convenince of plotting confidence intervals.
o BUG FIX: callABandHighAI() for PairedPSCBS used the old DH-only
  bootstrap method.
o BUG FIX: The statistical sanity checks of the bootstrap estimates
  would give an error when only single-sided bootstrap confidence
  interval was calculated.
o BUG FIX: The call functions, for instance callABandHighAI(), would throw
  'Error in quantile.default(x, probs = alpha) : missing values and NaN's
  not allowed if 'na.rm' is FALSE' unless bootstrapTCNandDHByRegion() was
  run before.


Version: 0.9.19 [2010-11-23]
o ROBUSTNESS: Added more sanity checks to bootstrapTCNandDHByRegion().
o WORKAROUND: The precision of the mean levels of DNAcopy::segment()
  is not great enough to always compare it to that of R's estimates.
o BUG FIX: bootstrapTCNandDHByRegion() would give an error if there was
  only one segment.
o BUG FIX: segmentByPairedPSCBS() and bootstrapTCNandDHByRegion() 
  would not subset the correct set of DH signals if there were some
  missing values in TCN.


Version: 0.9.18 [2010-11-22]
o Added argument 'calls' to plotTracks() for highlighing called regions.
o Updated callAllelicBalanceByDH() and callExtremeAllelicImbalanceByDH()
  to utilize bootstrapTCNandDHByRegion().
o ROBUSTNESS: Now drawConfidenceBands() of PairedPSCBS silently does
  nothing if the requested bootstrap quantiles are available.
o BUG FIX: bootstrapTCNandDHByRegion() for PairedPSCBS would not
  correctly detect if bootstrap results are already available.


Version: 0.9.17 [2010-11-21]
o Now plotTracks() supports tracks "tcn,c1", "tcn,c2" and "c1,c2" too.
o Added support for flavor "tcn&dh" in segmentByPairedPSCBS(), which
  contrary to "tcn,dh" enforces TCN and DH to have the same change